dartagnan/src/test/resources/spirv/opencl/gpuverify/sourcelocation_tests/races/pass/read_read.spvasm
; @Config: 3, 1, 3
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 36
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpName %p "p"
               OpName %q "q"
               OpName %r "r"
               OpName %entry "entry"
               OpName %p_addr "p.addr"
               OpName %q_addr "q.addr"
               OpName %r_addr "r.addr"
               OpName %call "call"
               OpName %arrayidx "arrayidx"
               OpName %call1 "call1"
               OpName %arrayidx2 "arrayidx2"
               OpName %call3 "call3"
               OpName %arrayidx4 "arrayidx4"
               OpName %call5 "call5"
               OpName %arrayidx6 "arrayidx6"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
               OpDecorate %p_addr Alignment 4
               OpDecorate %q_addr Alignment 4
               OpDecorate %r_addr Alignment 4
       %uint = OpTypeInt 32 0
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint %_ptr_Workgroup_uint %_ptr_Workgroup_uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void DontInline %8
          %p = OpFunctionParameter %_ptr_Workgroup_uint
          %q = OpFunctionParameter %_ptr_Workgroup_uint
          %r = OpFunctionParameter %_ptr_Workgroup_uint
      %entry = OpLabel
     %p_addr = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
     %q_addr = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
     %r_addr = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
               OpStore %p_addr %p Aligned 4
               OpStore %q_addr %q Aligned 4
               OpStore %r_addr %r Aligned 4
         %18 = OpLoad %_ptr_Workgroup_uint %q_addr Aligned 4
         %19 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
       %call = OpCompositeExtract %uint %19 0
   %arrayidx = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %18 %call
         %22 = OpLoad %uint %arrayidx Aligned 4
         %23 = OpLoad %_ptr_Workgroup_uint %p_addr Aligned 4
         %24 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
      %call1 = OpCompositeExtract %uint %24 0
  %arrayidx2 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %23 %call1
               OpStore %arrayidx2 %22 Aligned 4
         %27 = OpLoad %_ptr_Workgroup_uint %q_addr Aligned 4
         %28 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
      %call3 = OpCompositeExtract %uint %28 0
  %arrayidx4 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %27 %call3
         %31 = OpLoad %uint %arrayidx4 Aligned 4
         %32 = OpLoad %_ptr_Workgroup_uint %r_addr Aligned 4
         %33 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
      %call5 = OpCompositeExtract %uint %33 0
  %arrayidx6 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %32 %call5
               OpStore %arrayidx6 %31 Aligned 4
               OpReturn
               OpFunctionEnd
